--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -1,5 +1,10 @@
-# Google Gemini API Configuration
-GEMINI_API_KEY=gemini-api-key-here
+# Groq API Configuration (Recommended - FREE with high rate limits!)
+# Get your API key from: https://console.groq.com/keys
+GROQ_API_KEY=your-groq-api-key-here
+
+# Google Gemini API Configuration (Alternative/Fallback)
+# Get your API key from: https://aistudio.google.com/app/apikey
+# GEMINI_API_KEY=your-gemini-api-key-here
 
 # Logging
 RUST_LOG=info
